--- a/shelter/css/shelter.css
+++ b/shelter/css/shelter.css
@@ -50,13 +50,13 @@ table {
 
 @font-face {
   font-family: "Arial";
-  src: url("/fonts/arial/arial.woff2") format("woff2");
+  src: url(/shelter/fonts/arial/arial.woff2) format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Georgia";
+  font-family: "Georgia" sans-serif;
   src: url("/fonts/georgia/georgia-regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
@@ -79,8 +79,9 @@ html {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1280px;
   margin: 0 auto;
+  padding: 0 40px;
 }
 
 .logo_link {
@@ -140,12 +141,14 @@ html {
 .nav-link:focus, .nav-link:active {
   color: #FAFAFA;
   border-bottom: 3px solid #F1CDB3;
-  transition: 0.4s;
+  transition: 0.7s;
+  padding-bottom: 4px;
 }
 
-li:first-child {
+.first_link {
   color: #FAFAFA;
   border-bottom: 3px solid #F1CDB3;
+  padding-bottom: 4px;
 }
 
 .nav-link:hover {
@@ -167,12 +170,11 @@ li:first-child {
 }
 
 .not_only_content {
-  width: 460px;
-  height: 322px;
+  max-width: 460px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin-bottom: 85px;
+  justify-content: center;
+  margin-bottom: 70px;
 }
 
 .content_heading {
@@ -208,6 +210,7 @@ li:first-child {
   line-height: 130%;
   letter-spacing: 0.06em;
   color: #292929;
+  opacity: 0.9;
   text-decoration: none;
 }
 
@@ -218,7 +221,6 @@ li:first-child {
 
 .start_puppy {
   width: auto;
-  height: 100%;
 }
 
 /* section start screen styles end*/
@@ -344,6 +346,7 @@ li:first-child {
 .slider_item:hover {
   cursor: pointer;
 }
+
 .slider_item:hover .learn_more {
   cursor: pointer;
   border: 2px solid #FDDCC4;
@@ -391,4 +394,210 @@ li:first-child {
   letter-spacing: 0.06em;
 }
 
-/* section pets styles end*//*# sourceMappingURL=shelter.css.map */
+.rest_pets:hover {
+  background: #FDDCC4;
+  cursor: pointer;
+}
+
+/* section pets styles end*/
+/* section help styles start*/
+.help-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.help_heading {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #545454;
+  text-align: center;
+  margin: 80px 0 60px 0;
+}
+
+.help_list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 45px;
+}
+
+.help_list_card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 120px;
+  margin-bottom: 55px;
+}
+.help_list_card:nth-child(5), .help_list_card:last-child {
+  margin-right: 0;
+}
+
+.help_name {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+
+.help_item {
+  padding-bottom: 30px;
+}
+
+/* section help styles end*/
+/* section in addition styles start*/
+.in-addition {
+  background-color: #F6F6F6;
+}
+
+.in_addition_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 40px 90px 40px;
+}
+
+.in_addition_dog {
+  margin-right: 30px;
+  margin-bottom: 10px;
+  max-width: 50%;
+}
+
+.in_addition_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.in_addition_heading {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #545454;
+  padding-bottom: 20px;
+}
+
+.in_addition_subheading {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #545454;
+  padding-bottom: 20px;
+}
+
+.in_addition_credit_card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 349px;
+  max-height: 43px;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  background: #F1CDB3;
+  border-radius: 9px;
+}
+
+.in_addition_credit_card_number {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+
+.in_addition_legal_info {
+  font-family: "Arial";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  color: #B2B2B2;
+  max-width: 380px;
+}
+
+/* section in addition styles end*/
+/* section footer styles start*/
+footer {
+  background: url(/shelter/img/noise_transparent@2x.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20;
+}
+
+.footer_container {
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer_title {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+}
+
+.footer_locations, .footer_contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 16px;
+  margin-bottom: 60px;
+}
+
+.footer_locations {
+  max-width: 302px;
+}
+
+.email {
+  padding: 45px 0;
+}
+
+.location_1 {
+  padding: 33px 0;
+}
+
+.footer_element {
+  display: flex;
+  align-items: center;
+}
+
+.footer_icon {
+  padding-right: 20px;
+}
+
+.footer_text {
+  display: flex;
+  justify-content: space-around;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  letter-spacing: 0.06em;
+  color: #F1CDB3;
+}
+
+/* section footer styles end*//*# sourceMappingURL=shelter.css.map */
