refactor: change structure of the project

--- a/shelter/css/_footer.scss
+++ b/shelter/css/_footer.scss
@@ -37,6 +37,10 @@ footer {
     display: flex;
     align-items: center;
 }
+.footer_text:hover {
+    color: #FDDCC4;
+    transition: 0.5s;
+}
 .footer_icon {
     padding-right: 20px;
 }
