--- a/shelter/css/shelter.css
+++ b/shelter/css/shelter.css
@@ -112,7 +112,7 @@ html {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 60px 0;
+  padding: 30px 3px;
 }
 
 .navbar-list {
@@ -175,7 +175,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 70px;
+  margin-bottom: 73px;
 }
 
 .content_heading {
@@ -199,6 +199,10 @@ html {
 }
 
 .make_a_friend {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
   width: 207px;
   height: 52px;
   background: #F1CDB3;
@@ -381,6 +385,9 @@ html {
 }
 
 .rest_pets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 60px 0 100px;
   width: 261px;
   height: 52px;
@@ -395,6 +402,7 @@ html {
   color: #292929;
   letter-spacing: 0.06em;
   transition: 0.5s;
+  text-decoration: none;
 }
 
 .rest_pets:hover {
@@ -507,9 +515,11 @@ html {
   letter-spacing: 0.06em;
   color: #545454;
   padding-bottom: 20px;
+  cursor: default;
 }
 
 .in_addition_credit_card {
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -589,6 +599,11 @@ footer {
 .footer_element {
   display: flex;
   align-items: center;
+}
+
+.footer_text:hover {
+  color: #FDDCC4;
+  transition: 0.5s;
 }
 
 .footer_icon {
