--- a/shelter/css/shelter.scss
+++ b/shelter/css/shelter.scss
@@ -112,7 +112,7 @@ html {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 60px 0;
+  padding: 30px 3px;
 }
 
 .navbar-list {
@@ -172,11 +172,10 @@ html {
 
 .not_only_content {
   max-width: 460px;
-//   height: 322px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 70px;
+  margin-bottom: 73px;
 }
 
 .content_heading {
@@ -200,6 +199,10 @@ html {
 }
 
 .make_a_friend {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
   width: 207px;
   height: 52px;
   background: #F1CDB3;
@@ -383,6 +386,9 @@ html {
 }
 
 .rest_pets {
+  display: flex;
+  justify-content: center;
+  align-items:center;
   margin: 60px 0 100px;
   width: 261px;
   height: 52px;
@@ -397,6 +403,7 @@ html {
   color: #292929;
   letter-spacing: 0.06em;
   transition: .5s;
+  text-decoration: none;
 }
 .rest_pets:hover {
   background: #FDDCC4;
@@ -500,8 +507,10 @@ html {
     letter-spacing: 0.06em;
     color: #545454;
     padding-bottom: 20px;
+    cursor: default;
 }
 .in_addition_credit_card {
+  text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: space-between;
