--- a/shelter/css/shelter.scss
+++ b/shelter/css/shelter.scss
@@ -353,6 +353,7 @@ html {
 
 .slider_item:hover {
   cursor: pointer;
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
 .slider_item:hover .learn_more {
   cursor: pointer;
