--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -137,9 +137,19 @@ html {
   padding-bottom: 4px;
 }
 
+.second_link_2 {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 160%;
+  text-decoration: none;
+  color: #292929;
+  cursor: default;
+}
+
 .second_link {
   border-bottom: 3px solid #F1CDB3;
-  cursor: default;
 }
 
 .nav-link:hover {
@@ -225,6 +235,7 @@ html {
 
 .slider_item:hover {
   cursor: pointer;
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
 
 .slider_item:hover .learn_more {
