fix:  fix pics size

--- a/shelter/css/shelter.css
+++ b/shelter/css/shelter.css
@@ -226,7 +226,7 @@ html {
 }
 
 .start_puppy {
-  width: auto;
+  width: 43vw;
 }
 
 /* section start screen styles end*/
@@ -237,10 +237,10 @@ html {
   align-items: center;
 }
 
-.about_pets_img {
-  width: auto;
+.about_pets {
+  width: 25vw;
   height: 100%;
-  margin: 80px 120px 99px 175px;
+  margin: 6.67% 10% 8.25% 14.58%;
 }
 
 .about_content {
