--- a/shelter/css/shelter.scss
+++ b/shelter/css/shelter.scss
@@ -225,8 +225,8 @@ html {
   background: #FDDCC4;
 }
 .start_puppy {
-  width: auto;
-//   height: 100%;
+  width: 43vw;
+ // width: auto;
 }
 
 /* section start screen styles end*/
@@ -238,10 +238,10 @@ html {
   align-items: center;
 }
 
-.about_pets_img {
-  width: auto;
+.about_pets {
+  width: 25vw;
   height: 100%;
-  margin: 80px 120px 99px 175px;
+  margin: 6.67% 10% 8.25% 14.58%;
 }
 
 .about_content {
