--- a/shelter/css/shelter.css
+++ b/shelter/css/shelter.css
@@ -493,20 +493,36 @@ html {
 .carousel {
   display: flex;
   justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  transition: transform 0.4s ease-in-out;
+  transform: translateX(0);
+}
+
+.slide-right {
+  transform: translateX(100%);
+}
+
+.slide-left {
+  transform: translateX(-100%);
 }
 
 .slider_item {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-right: 90px;
+  margin-right: 45px;
+  margin-left: 45px;
   background-color: #FAFAFA;
   border-radius: 9px;
+  transition: opacity 0.5s ease-in-out;
+  width: 270px;
 }
 
-.last_item {
-  margin-right: 0;
+.slider_item.show {
+  display: flex;
 }
 
 .name {
@@ -556,7 +572,6 @@ html {
   width: 52px;
   height: 52px;
   background-color: inherit;
-  margin-top: 190px;
 }
 
 .arrow_back:hover, .arrow_forward:hover {
@@ -567,11 +582,11 @@ html {
 }
 
 .arrow_back {
-  margin-right: 53px;
+  margin-right: 8px;
 }
 
 .arrow_forward {
-  margin-left: 53px;
+  margin-left: 8px;
 }
 
 .rest_pets {
@@ -601,44 +616,39 @@ html {
 }
 
 @media (max-width: 1200px) {
-  .last_item {
-    display: none;
+  .carousel {
+    flex-wrap: wrap;
   }
-  .slider_item:nth-child(3) {
-    margin-right: 0;
+  .slider_item {
+    width: 270px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
-  .first_slider_item {
-    margin-right: 40px;
-  }
-}
-@media (max-width: 940px) {
   .arrow_back {
-    margin-right: 12px;
+    margin-right: 0;
+    margin-left: 0;
+    float: left;
   }
   .arrow_forward {
-    margin-left: 12px;
+    margin-left: 0;
+    margin-right: 0;
+    float: right;
   }
 }
 @media (max-width: 767px) {
+  .carousel {
+    flex-wrap: wrap;
+  }
   .our_friends_heading {
     max-width: 300px;
     margin: 42px 0;
     font-size: 25px;
   }
-  .slider_item:nth-child(3) {
-    display: none;
-  }
-  .first_slider_item {
+  .slider_item {
     margin-right: 25px;
     margin-left: 25px;
     width: 90%;
-    order: 1;
     margin-bottom: 18px;
-  }
-  .carousel {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
   }
   .arrow_back, .arrow_forward {
     order: 2;
